--- a/WebContent/day03/member.html
+++ b/WebContent/day03/member.html
@@ -38,7 +38,7 @@
 <body>
 	<div style="width: 70%; margin: auto;">
 		<h3>회원 등록</h3>
-		<form action="member_save.jsp" name="frmReg" method="post"
+		<form action="member_dbsave.jsp" name="frmReg" method="post"
 			onsubmit="return validCheck()">
 			<table style="width: 100%">
 				<tr>
@@ -72,7 +72,9 @@
 							<option value="광주">광주</option>
 							<option value="기타">기타</option>
 					</select> 
-					<span id="addr_id"><input type="text" name="addr_etc" disabled="disabled" 
+					<span id="addr_id">
+					<!-- disabled="disabled" 는 파라미터 값 전달에서 제외 -->
+					<input type="text" name="addr_etc" disabled="disabled" 
 							placeholder="기타 지역을 입력하세요." >
 					</span></td>
 				</tr>
@@ -103,11 +105,11 @@
 	</div>
 	<script type="text/javascript">
 	document.getElementById("addr_select").addEventListener("change",function(){
-		if(this.value=="기타"){
-//			document.getElementById("addr_id").style.display="inline-block";
+		if(this.value=="기타"){ //this는 getElementById("addr_select") 요소
+//			document.getElementById("addr_id").style.display="inline-block";	//화면에 보임
 			document.frmReg.addr_etc.disabled=false;
 		}else {
-//			document.getElementById("addr_id").style.display="none";
+//			document.getElementById("addr_id").style.display="none";	//화면에 안보임
 			document.frmReg.addr_etc.disabled=true;
 		}
 		
