--- a/WebContent/day03/member.html
+++ b/WebContent/day03/member.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>JSP1 프로젝트[6]-회원 등록</title>
+<title>JDay03[2]- db 회원 등록</title>
 <!-- 스타일 참고  -->
 <link rel="stylesheet" href="../css/member.css">
 <script>
